--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Bird - Daniel</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <canvas id="game-canvas" width="320" height="480"></canvas>
     <style>
         body {
+          background-color: #000000;
           min-height: 100vh;
           display: flex;
           justify-content: center;
           align-items: center;
         }
         canvas {
-          border: 1px solid #000;
+          border: 3px solid white;
           display: block;
           margin: 0 auto;
         }
